# drone-projects

./: .clang-format  .gitignore  README.md  capture_video.sh
_catch/: CMakeLists.txt
_catch/include/: internal.h
_catch/src/: main.cpp
cv_ball_tracking/: CMakeLists.txt  main.cpp
cv_camera_calibration/: CMakeLists.txt
cv_video_capture/: CMakeLists.txt  main.cpp
mav_offboard/: offboard_velocity.cpp
mav_takeoff_and_land/: .clang-format  takeoff_and_land.cpp
mav_takeoff_and_land/scripts/: capture_video.sh
project_catch/: .clang-format  CMakeLists.txt
project_catch/include/: common.h  transforms.h
project_catch/src/: common.cpp  main.cpp  transforms.cpp
project_chase/: .clang-format  CMakeLists.txt  README.md
project_chase/include/: CameraProfile.h  Chase2D.h  camera_profile.h  chase2d.h
project_chase/src/: CameraProfile.h  Chase2D.cpp  Chase2D.h  _common.h  chase2d.cpp  chase2d.h  main.cpp
test_cv_recording/: CMakeLists.txt  cv_recording.cpp
test_cv_tracking/: CMakeLists.txt  main.cpp
test_diff_tracking/: CMakeLists.txt  main.cpp
test_indoor_coordinates/: CMakeLists.txt  main.cpp
test_mavsdk-python/: offboard_position_ned.py  takeoff_and_land.py  telemetry.py
test_mosse_tracking/: CMakeLists.txt  main.cpp
test_offboard/: CMakeLists.txt  offboard.cpp
test_takeoff/: CMakeLists.txt  takeoff_and_land.cpp
validate-catch/: validate_uv.py
